[package]

name = "mpack"
version = "0.0.4"
authors = ["Damien Radtke"]

description = "A new MessagePack implementation for Rust."
repository = "https://github.com/dradtke/mpack.git"
documentation = "http://rust-ci.org/dradtke/mpack/doc/mpack/"
keywords = ["msgpack", "MessagePack", "rpc"]
license = "MIT"

